[package]
name = "xerophi2"
version = "0.1.0"
authors = ["Innectic <innectic@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0.33"
serde_json = "1.0.33"
serde_derive = "1.0.3"
mongodb = "*"
bson = "*"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
