[package]
name = "xerophi"
version = "0.1.0"
authors = ["Innectic <innectic@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde_derive = "1.0.89"
serde_json = "1.0.39"
mongodb = "0.3.12"
bson = "0.13.0"
chrono = "0.4.6"
rust-argon2 = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]

[dependencies.serde]
version = "1.0.89"
default-features = false
features = ["derive"]
